# weather_updated

./: .env.example  .gitignore  =1.2.2  AGENTS.md  CLAUDE.md  Dockerfile  FAST_COMPUTER_SETUP.md  Makefile  NOAA_API_KEY.txt  PHASE4_STATUS.md  README.md  ROADMAP.md  VC_IMPLEMENTATION_SUMMARY.md  VERIFICATION_MODEL_INTERNALS.md  alembic.ini  api_key.txt  backtest_chi_between_baseline.json  backtest_chi_between_unified_tau12.json  docker-compose.yml  hot-to_weather_history.md  how-to_dates.md  how-to_visual_crossing.md  modeling_clarification.md  modeling_hints.md  project_status.md  pyproject.toml  requirements.txt  requirements_frozen.txt  secret.txt  status_2025-11-18.md  test_inference_parity.py  test_live_trading_platform.py  test_market_loading.py  test_scanner_simple.py  training_log.txt
.Trash-1000/files/MRAMC++V2/: BUILD_CHECKLIST.md  CMakeLists.txt  MODULE_NAVIGATION_GUIDE.md  Makefile  README.md  WHAT_YOU_NEED.md  demo.cpp  enhanced_marketing_agent.cpp  enhanced_marketing_agent.hpp
.claude/: .fuse_hidden0000005000000002  HANDOFF_2025-12-08.md  fast_comp.md  fast_computer_chicago.md  settings.local.json.OLD
alembic/: env.py
analysis/: __init__.py
archive/: AGENT_DESIGN.md
backtest/: __init__.py  bin_labels.py  diagnostics.py  fees.py  kelly.py  midnight_heuristic.py  model_kelly_adapter.py  model_strategy.py  optuna_tuning.py  outcome.py  portfolio.py  risk.py  run_backtest.py  strategy.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
config/: auto_trader.json  edge_thresholds.py  edge_trader.json  live_trader_config.py  open_maker_base_best_params.json  open_maker_curve_gap_best_params.json  open_maker_next_over_best_params.json
configs/: elasticnet_chi_between.yaml  elasticnet_chi_greater.yaml  elasticnet_chi_less.yaml
data/: file_inventory.json  market_clock_austin.parquet  market_clock_chicago.parquet  market_clock_chicago_2025.parquet  market_clock_chicago_validation.columns.txt  market_clock_chicago_validation.parquet
db/: connection.py  models.py
docs/: 1_instructions_to_start.md  3_how_to_pull_all_high_temps.md  4_how_to_historical_forecast.md  5_fix_philly_date_alignments.md  6_modeling_features.md  7_heuristics_strategies.md  8_models_strat3and4_further.md  8_strategies3and4.md  DEVELOPER_HANDOFF.md  EDGE_CLASSIFIER_COMPLETE_FILE_REFERENCE.md  HANDOFF_2025-12-09.md  HANDOFF_2025-12-09_predict.md  INFERENCE_SYSTEM_HANDOFF.md  KALSHI_CANDLESTICK_SCHEMA_REVIEW.md  LIVE_TRADER_IMPROVEMENTS.md  NEXT_STEPS_2025-11-18.md  NEXT_STEPS_2025-11-19.md  NEXT_STEPS_2025-11-19_TRIAD_NEXT_STEPS.md  NEXT_STEPS_TRIAD_2025-11-19-2.md  PLANNING_2025-11-26_144243.md  PLANNING_2025-11-26_170117.md  PLANNING_2025-11-27_020512.md  README_AGENT.md  SESSION_SUMMARY_2025-11-30.md  SYSTEMD_JOBS.md  TMAX_FORECAST_PIPELINE.md  TOD_IMPLEMENTATION_HANDOFF.md  catboost_integration.md  edge_classifier_session_handoff.md  file_inventory.md  how-to_weather_non_NYC.md  modeling2.2.md  modeling_2.1.md  next_steps_20251125_000607.md  next_steps_NOW.md  next_steps_model_go_forward.md  planning_next_steps.md  refactor_plan_v1.md  tmax_metadata_contract.md
ingest/: continuous_ingest.py  daily_update.py  iem_cf6_daily.py  load_to_db.py
kalshi/: bin_labels.py  date_utils.py  schemas.py
legacy/: AGENTS.md  README.md  ingest_vc_forecast_history.py  ingest_vc_historical_forecast_v2.py  ingest_vc_minutes.py  poll_vc_forecast_daemon.py
live_trading/: __init__.py  config.py  daily_loss_tracker.py  edge_trader.py  incremental_executor.py  inference.py  market_data.py  order_manager.py  position_tracker.py  scanner.py  utils.py
logs/: 12-6-2025_afternoon_multi_city_train.md  terminal_outputs_afternoon_training.md
migrations/: 20251127_add_market_open_log.sql
ml/: catboost_model.py  catboost_simple.py  city_config.py  config.py  dataset.py  date_utils.py  ensembling.py  ev_catboost_model.py  ev_dataset.py  eval.py  feature_store.py  features.py  load_model.py  logit_linear.py  ordinal_dataset.py  ordinal_head.py  run_ensemble.py  train_ev_catboost.py  train_ordinal.py  train_walkforward.py  unified_head.py
models/: README.md  __init__.py  candles_chicago_may2025.parquet  costs.py
notes/: codex_session_2025-11-19.md
open_maker/: __init__.py  core.py  core_runner.py  data_loading.py  live_trader.py  manual_trade.py  market_open_listener.py  optuna_tuner.py  prob_to_orders.py  reporting.py  utils.py
results/: backtest_austin_between.json  backtest_austin_between_catboost.json  backtest_austin_between_catboost_baseline.json  backtest_austin_between_catboost_evfilter_allow.json  backtest_austin_between_catboost_evfilter_blend50.json  backtest_austin_between_catboost_optuna.json  backtest_austin_between_catboost_optuna50.json  backtest_austin_between_catboost_peak.json  backtest_austin_between_en_nextgen.json  backtest_austin_between_ev.json  backtest_chi_between_baseline.json  backtest_chi_between_unified_tau1p2.json  backtest_chi_less_summary.json  backtest_chicago_between_en.json  backtest_chicago_tmax.json  backtest_chicago_tmax_extended.json  backtest_chicago_tmax_gated_055_050.json  backtest_chicago_tmax_gated_060_075.json  backtest_chicago_tmax_latest.json  backtest_denver_between_en.json  backtest_miami_between_en.json  backtest_philadelphia_between_en.json  calibration_chicago_gbdt_1m.json  calibration_chicago_gbdt_5m.json  calibration_chicago_logreg_1m.json  calibration_chicago_logreg_5m.json  catboost_test.json  elasticnet_test.json  log_baseline_catboost.txt  log_catboost_evfilter.txt  log_catboost_evfilter_allow.txt  log_catboost_evfilter_min5.txt  tmax_model_chicago_extended.json  tmax_model_chicago_latest.json
scripts/: aggregate_backtest_results.py  analyze_edge.py  analyze_pilot.py  analyze_skill_vs_horizon.py  audit_data_coverage.py  augment_austin_noaa_features.py  auto_trader_daemon.py  backfill_kalshi_candles.py  backfill_kalshi_markets.py  backfill_settlements.py  backfill_vc_historical_forecasts.py  backtest_edge.py  backtest_tmax_daily.py  backtest_utils.py  build_dataset_from_parquets.py  build_dataset_parallel.py  (+87 more)
(+902 files in other folders)
