[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-weather"
version = "2.0.0"
description = "Kalshi weather trading pipeline with TimescaleDB"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Halsted"}
]

dependencies = [
    # Core
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Auth/Security
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",

    # Web scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",

    # ML/Analysis
    "scikit-learn>=1.3.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "pyarrow>=14.0.0",
    "tqdm>=4.66.0",

    # WebSocket (for live data)
    "websockets>=12.0",

    # Retry/resilience
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "ipython>=8.0.0",
]

[project.scripts]
kalshi-ingest = "scripts.backfill_kalshi_markets:main"
kalshi-candles = "scripts.backfill_kalshi_candles:main"
vc-minutes = "scripts.ingest_vc_minutes:main"
vc-forecasts = "scripts.ingest_vc_forecasts:main"
nws-settlement = "scripts.ingest_settlement_nws:main"
validate = "scripts.validate_settlements:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
